<resources>
    <string name="app_name">Club Z</string>
    <string name="facebook_app_id">1901949733451269</string>
    <string name="fb_login_protocol_scheme">fb1901949733451269</string>
    <string name="server_client_id">303882214487-pkujqbkqgmq3m22muu8kbkj17n6hvvdc.apps.googleusercontent.com</string>
    <string name="admob_app_id">ca-app-pub-2270528014536403~6190929441</string>
    <string name="banner_home_footer">ca-app-pub-2270528014536403/7831739205</string>
    <string name="ad_unit_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="explore1">Explore the</string>
    <string name="explore2">universe</string>
    <string name="explore3">around you</string>
    <string name="country">Country</string>
    <string name="by_taping1">By tapping </string>
    <string name="by_taping1_2">you accept the </string>
    <string name="by_taping2">By continuing you accept our </string>
    <string name="and"> and  the </string>
    <string name="and_only"> and  </string>
    <string name="termsandcon"> <u>Terms and conditions</u></string>
    <string name="privacypolic"> <u>Privacy policy</u></string>
    <string name="orlogin"> Or login with</string>
    <string name="orconnect"> Or connect with</string>
    <string name="google"> Google</string>
    <string name="facebook"> Facebook</string>
    <string name="dont_acc"> Don\'t have an account?</string>
    <string name="find_actvit">Find activities near you</string>
    <string name="stay_update"> Stay updated about your community  </string>
    <string name="in_touch_neigh"> Get in touch with your neighbours   </string>
    <string name="product_service"> Promote your products or services   </string>
    <string name="sent_code"> We have sent you confirmation code to validate your phone number </string>
    <string name="club_code_sms"> The verification code for your Club Z account is: </string>
    <string name="to_start"> To begin , let us know who you are </string>
    <string name="affilites"> Add your affiliates  </string>
    <string name="affilites_is"> An affiliates is a person you could invite to an activity . Your family members or friends.  </string>
    <string name="finaly_sel"> Finally select or write your interest </string>
    <string name="sel_skill"> And select or write your skill </string>
    <string name="alert"> Alert </string>
    <string name="no_content"> There is no content still here</string>
    <string name="no_club_here">The club will be available once the club manager create it.</string>
    <string name="no_content_here_body">The activity will be available once the club manager create it.</string>
    <string name="no_content_body"> Join to a club to get exclusive content like news, activities, chats, ads and more. </string>
    <string name="near_club"> Near clubs </string>
    <string name="contact_info">Contact info</string>
    <string name="club_mail">Club\'s email</string>
    <string name="club_phone">Club\'s phone</string>
    <string name="club_addres">Club\'s address</string>
    <string name="club_locati">Club\'s location</string>
    <string name="club_website">Club\'s website</string>
    <string name="club_description">Club description</string>
    <string name="lead_by">Lead by</string>
    <string name="user_role">User Role</string>
    <string name="Terms_and_1"><u>Terms And Conditions</u></string>
    <string name="Terms_and_2">Terms and Conditions text</string>
    <string name="club">Club</string>
    <string name="club_info">Club info</string>
    <string name="foundation_date">Foundation date</string>
    <string name="club_email">Club email</string>
    <string name="club_phone_no">Club phone</string>
    <string name="club_city">Club city</string>
    <string name="club_address">Club address</string>
    <string name="club_web_site">Club website</string>
    <string name="t_stay_up"> Stay updated </string>
    <string name="t_new_club"> New Club </string>
    <string name="t_detils"> Details </string>
    <string name="t_members"> Members </string>
    <string name="t_my_clubs"> My clubs </string>
    <string name="t_near_clubs"> Near clubs </string>
    <string name="t_manage_your_clubs"> Manage your clubs </string>
    <string name="t_join_the_force"> Join the force </string>
    <string name="t_al_gps"> Please turn on your GPS </string>
    <string name="t_error_location"> Error getting your location </string>
    <string name="no_internet"> No internet connection </string>
    <string name="temp_sucess"> Successfully registered </string>
    <string name="no_internet2">An internet connection is required to sign in, sign up and search clubs. Once you have registered this device, you can access your content offline.</string>
    <string name="t_find_activities"> Stay active </string>
    <string name="t_new_activity"> New Activity </string>
    <string name="t_set_notification"> Set Notification </string>
    <string name="my_activity"> My activities </string>
    <string name="others_activity"> Others activities </string>
    <string name="t_content"> Content </string>
    <string name="t_chat"> Chat </string>
    <string name="title_chat"> Keep in Touch </string>
    <string name="t_ads"> Promote your stuffs </string>
    <string name="item_1">News</string>
    <string name="item_2">Activities</string>
    <string name="item_3">Chat</string>
    <string name="item_4">Ads</string>
    <string name="club_op_1"> Show private clubs</string>
    <string name="club_op_2"> Show public clubs</string>
    <string name="slider_t1"> Activities </string>
    <string name="slider_t2"> News  </string>
    <string name="slider_t3"> Chat  </string>
    <string name="slider_t4"> Ads   </string>
    <string name="slider_my_activities">My Activities</string>
    <string name="error_session_expired">Session expired</string>
    <string name="error_session_expired_msg">Your session is expired please login again</string>
    <string name="slider_b1"> Find matches, \n events, classes,\n interesting groups\n and many other \n great things \n around you   </string>
    <string name="slider_b2"> Stay updated\n with your\n community by \n reading the latest \n news and \npress releases </string>
    <string name="slider_b3"> Get in touch with \n your neighbors\n and talk about\n black holes or\n wormholes, as you\n prefer  </string>
    <string name="slider_b4"> Promote your\n products or\n services and\n give your\n customer a way\n to reach you  </string>
    <string name="step_r1"> Login and look what\'s happening </string>
    <string name="step_r2"> Help us to validate your phone number </string>
    <string name="step_r3"> This is just to break the ice  <node>&#x1F600;</node></string>
    <string name="step_r4"> Almost done, add your affiliates </string>
    <string name="phone_no"> Phone number </string>
    <string name="confirm_code"> Confirmation code </string>
    <string name="user_name"> User Name </string>
    <string name="first_name"> First Name </string>
    <string name="last_name"> Last Name </string>
    <string name="email"> Email Address </string>
    <string name="fullname"> Full Name </string>
    <string name="affilites_name"> Affiliate\'s Name </string>
    <string name="type_here"> Type here </string>
    <string name="hint_step1_1"> <i>This one you are using</i></string>
    <string name="hint_step2_1"> <i>4-digit code sent by SMS</i></string>
    <string name="hint_step3_1"> <i>To know who are you</i></string>
    <string name="hint_step3_2"> <i>To recover your account</i> </string>
    <string name="hint_step4_1"> <i>Family members or friends</i> </string>
    <string name="hint_club_name"> Club\'s Name </string>
    <string name="hint_club_date"> Foundation date </string>
    <string name="hint_club_s"> Search for club </string>
    <string name="hint_club_des"> Club\'s description </string>
    <string name="hint_club_termcondi"> Terms and condition text </string>
    <string name="hint_article_name"> Article Name </string>
    <string name="feedtitile"> Title </string>
    <string name="feeddescription"> Description </string>
    <string name="hint_activity_name"> Activity name</string>
    <string name="prompt_spinner_active_leader"> Activity Leader </string>
    <string name="fees_type"> Fee type</string>
    <string name="hint_activity_location"> Select location </string>
    <string name="hint_location"> Location </string>
    <string name="hint_fees"> Fee </string>
    <string name="hint_max_user">Max. users </string>
    <string name="hint_min_user">Min. users </string>
    <string name="admin_by"> Administrator by </string>
    <string name="club_private"> Private </string>
    <string name="club_public"> Public </string>
    <string name="sign_in"> Sign In </string>
    <string name="confirm"> Confirm </string>
    <string name="un_confirm"> Unconfirm </string>
    <string name="next"> Next </string>
    <string name="done"> Done </string>
    <string name="connect"> Connect </string>
    <string name="signup"> Sign Up </string>
    <string name="create_one"> Create One </string>
    <string name="try_again"> Try again </string>
    <string name="viewplan"> View Plans </string>
    <string name="cancel"> Cancel </string>
    <string name="logout"> Logout </string>
    <string name="resend"> Resend code </string>
    <string name="search"> Search </string>
    <string name="close">CLOSE</string>
    <string name="req_join"> Request </string>
    <string name="remove"> Remove </string>
    <string name="dismis"> Dismiss </string>
    <string name="join"> Join </string>
    <string name="skip">Skip</string>
    <string name="got">Got it</string>
    <string name="a_username"> Please enter username. </string>
    <string name="a_username_space"> User name can\'t have space. </string>
    <string name="a_firstname"> Please enter First name. </string>
    <string name="a_last_name"> Please enter Last name. </string>
    <string name="a_full_name"> Please enter Full name. </string>
    <string name="a_full_name_new"> Oh! it seems you forgot to write your name. </string>
    <string name="a_email"> Please enter email address. </string>
    <string name="a_email_new"> Apparently you did not write your email right. </string>
    <string name="a_email_valid"> Please enter valid email address. </string>
    <string name="a_phone_no">  Enter your phone number for verification via SMS. </string>
    <string name="a_phone_no_valid">  Please enter valid phone number. </string>
    <string name="a_select_code">  Please select country code. </string>
    <string name="swr">Something went to wrong. please try again.</string>
    <string name="a_confirmation_code"> Please enter confirmation code.</string>
    <string name="a_confirmation_code2"> Invalid confirmation code.</string>
    <string name="a_addskill"> Please enter Skill.</string>
    <string name="a_addaffil"> Please enter Affiliates.</string>
    <string name="a_max10"> Oops, you can affiliate only 10 persons :.</string>
    <string name="a_addintres"> Please enter Interest.</string>
    <string name="a_already_affil"> Affiliates already added.</string>
    <string name="a_already_intrest"> Interest already added.</string>
    <string name="a_already_skill"> Skill already added.</string>
    <string name="a_permission_denied"> Permission denied can\'t select image.</string>
    <string name="a_camera_denied"> Camera  permission denied.</string>
    <string name="about_me">About me</string>
    <string name="clubs">Clubs</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="add_date">Add a new date</string>
    <string name="remove_activity">Remove this activity</string>
    <string name="hide_activity">Hide this activity</string>
    <string name="disable_notification">Disable Notification</string>
</resources>