<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/addDate"
        android:icon="@drawable/ic_add_24"
        android:iconTint="@color/text_color_gray"
        android:title="@string/add_date" />
    <item
        android:id="@+id/removeAct"
        android:icon="@drawable/ic_delete_icon"
        android:iconTint="@color/text_color_gray"
        android:title="@string/remove_activity" />
    <item
        android:id="@+id/hideAct"
        android:icon="@drawable/ic_visibility_off"
        android:iconTint="@color/text_color_gray"
        android:title="@string/hide_activity" />
    <item
        android:id="@+id/disableNotification"
        android:icon="@drawable/ic_notifications_off"
        android:iconTint="@color/text_color_gray"
        android:title="@string/disable_notification" />
</menu>
