<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/white">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:textColor="@color/white"
        android:background="@color/primaryColor"
        android:gravity="center"
        android:textSize="@dimen/_12sdp"
        android:text="@string/alert"/>

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:layout_margin="@dimen/_20sdp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/ic_network_ico"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_14sdp"
        android:textColor="@color/primaryColor"
        android:gravity="center"
        android:text="@string/no_internet"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/text_gray"
        android:textSize="@dimen/_12sdp"
        android:gravity="center"
        android:layout_margin="@dimen/_30sdp"
        android:text="@string/no_internet2"/>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_30sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="@font/poppins_regular"
        android:background="@drawable/bg_btn_green"
        android:gravity="center"
        android:textAllCaps="false"
        android:layout_margin="@dimen/_30sdp"
        android:text="@string/try_again" />

</LinearLayout>