<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.clubz.Splash_Activity"
  >

    <ImageView
        android:id="@+id/stars_iv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/splash"/>

    <View
        android:layout_width="@dimen/_140sdp"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@color/black65"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <android.support.v7.widget.AppCompatImageView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/ic_zoe"
        android:layout_marginTop="@dimen/_50sdp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_30sdp"
        android:gravity="center_horizontal"
        android:textColor="@color/unserline_color"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/app_name"/>
    <View
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_1sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@color/unserline_color"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_16sdp"
            android:gravity="center_horizontal"
            android:textColor="@color/unserline_color"
            android:text="@string/explore1"
            android:fontFamily="@font/poppins_semibold"
            android:layout_marginTop="@dimen/_10sdp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_25sdp"
            android:gravity="center_horizontal"
            android:textColor="@color/unserline_color"
            android:text="@string/explore2"
            android:fontFamily="@font/poppins_semibold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_18sdp"
            android:gravity="center_horizontal"
            android:textColor="@color/unserline_color"
            android:text="@string/explore3"
            android:fontFamily="@font/poppins_semibold" />
        <View
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_1sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@color/unserline_color"/>
    </LinearLayout>

</FrameLayout>
